grid: fix initial visibility

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -506,7 +506,7 @@ body {
     background: var(--color-bg);
 }
 
-.post-feed .grid .are-images-unloaded {
+.are-images-unloaded {
   opacity: 0;
 }
 
@@ -522,9 +522,6 @@ body {
     max-width: 100%;
 }
 
-.post-feed .grid .are-images-unloaded .post-card {
-  opacity: 0;
-}
 .post-feed .grid-sizer {
     height: 0;
     margin: 0;
